--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ li a {
 }
 
 .logo {
-    width: 162.22px;
-    height: 42px;   
+    width: 122.22px;
+    height: 82px;   
 }
 
 .header_main_container {
@@ -142,7 +142,7 @@ li a {
     right: 0;
     width: 100%;
     height: 50px;
-    background: linear-gradient(90deg, #0A2640 0%, rgba(10, 38, 64, 0.109375) 31.6%, rgba(10, 38, 64, 0) 72.89%, #0A2640 97.87%);
+    /* background: linear-gradient(90deg, #0A2640 0%, rgba(10, 38, 64, 0.109375) 31.6%, rgba(10, 38, 64, 0) 72.89%, #0A2640 97.87%); */
     z-index: 1; 
 }
 
@@ -152,6 +152,8 @@ li a {
 }
 
 .Presto {
+    width: 120px;
+    height: 65px;
     position: absolute;
     animation-name: move;
     animation-duration: 10s;
@@ -161,6 +163,8 @@ li a {
 }
 
 .Boldo {
+    width: 120px;
+    height: 65px;
     position: absolute;
     animation-name: move;
     animation-duration: 10s;
